package sep.project.Controllers;

import org.springframework.stereotype.Controller;

@Controller
public class WebPageController {
}
