@startuml
skinparam classAttributeIconSize 0
hide circle

class ApplicationStart {
  +{static} Main(): void
}

class RestApiController {
  -pointTradeList: PointTradeList
  -clovervilleResidentList: ClovervilleResidentList
  -communityGreenPoints: CommunityGreenPoints
  --
  +RestApiController(pointTradeList: PointTradeList, clovervilleResidentList: ClovervilleResidentList, communityGreenPoints: CommunityGreenPoints)
  +getPointTrades(): String
  +getGreenPoints(): String
  +getResidents(): String
  +getCommunityTasks(): String
}

class WebPageController {
}

class ClovervilleResidentList {
  -residentList: ArrayList<ClovervilleResident>
  --
  +ClovervilleResidentList()
  +setResidentList(list: ArrayList<ClovervilleResident>): void
  +getResidentList(): ArrayList<ClovervilleResident>
  +getClovervilleResidentById(Id: Long): ClovervilleResident
  +toJsonString(): String
}

class CommunityTaskList {
}

class PointTradeList {
  -trades: ArrayList<PointTrade>
  --
  +PointTradeList()
  +populateArrayFromPersistence(listFromStorage: ArrayList<PointTrade>): void
  +getPointTradeList(): ArrayList<?>
  +executePointTrade(secondResidentId: Long): void
  +toJsonString(): String
}

class Administrator {
  -id: Long
  -name: String
  -loggedIn: boolean
  --
  +Administrator(name: String)
  +getId(): Long
  +setId(id: Long): void
  +getName(): String
  +setName(name: String): void
  +isLoggedIn(): boolean
  +setLoggedIn(loggedIn: boolean): void
  +addGreenAction(action: GreenAction): void
  +editGreenAction(): void
}

class ClovervilleResident {
  -residentId: Long
  -name: String
  --
  +ClovervilleResident(name: String)
  +reportGreenAction(): void
  +getResidentId(): Long
  +getName(): String
  +toJsonString(): String
}

class CommunityGreenPoints {
  -totalPoints: int
  --
  +CommunityGreenPoints(totalPoints: int)
  +getTotalPoints(): int
  +setTotalPoints(points: int): void
  +toJsonString(): String
}

class GreenAction {
  -actionId: Long
  -description: String
  -pointValue: int
  --
  +GreenAction(desc: String, value: int)
  +getActionId(): Long
  +getDescription(): String
  +getPointValue(): int
  +setDescription(description: String): void
  +setPointValue(pointValue: int): void
}

class PointTrade {
  -tradeName: String
  -pointTradeId: Long
  -creatorResidentId: Long
  -description: String
  -pointAmount: int
  --
  +PointTrade(name: String, pointAmount: int, descString: String, creatorResidentId: Long)
  +toJsonString(): String
  +getTradeName(): String
  +getPointTradeId(): Long
  +setPointTradeId(pointTradeId: Long): void
  +getCreatorResidentId(): Long
  +setCreatorResidentId(creatorResidentId: Long): void
  +getDescription(): String
  +setDescription(description: String): void
  +getPointAmount(): int
  +setPointAmount(pointAmount: int): void
}

class ClovervillePersistenceService {
  -{static} pathToStorageDirectory: String = "/lib/storage"
  --
  +ClovervillePersistenceService()
  -{static} writeStringToJsonFile(value: String, filename: String): void
  +{static} saveTradeList(list: PointTradeList): void
  +{static} saveCommunityPoints(points: CommunityGreenPoints): void
  +{static} loadTradeList(): PointTradeList
  +{static} loadCommunityGreenPoints(): CommunityGreenPoints
  +{static} loadClovervilleResidentList(): ClovervilleResidentList
}

RestApiController *-- PointTradeList
RestApiController *-- ClovervilleResidentList
RestApiController *-- CommunityGreenPoints
ClovervilleResidentList o-- ClovervilleResident
PointTradeList o-- PointTrade
Administrator ..> GreenAction
ClovervillePersistenceService ..> PointTradeList
ClovervillePersistenceService ..> CommunityGreenPoints
ClovervillePersistenceService ..> ClovervilleResidentList
@enduml